y.output
Terminais sem uso na gramática

   INT
   FLOAT
   EXPR
   ATTR
   COND
   LOOP
   IO
   STMT
   STMTS
   DECL
   FUNC_CALL


Estado 28 conflitos: 1 de deslocamento/redução
Estado 89 conflitos: 13 de deslocamento/redução
Estado 90 conflitos: 13 de deslocamento/redução
Estado 91 conflitos: 13 de deslocamento/redução
Estado 92 conflitos: 13 de deslocamento/redução
Estado 93 conflitos: 13 de deslocamento/redução
Estado 94 conflitos: 13 de deslocamento/redução
Estado 95 conflitos: 13 de deslocamento/redução
Estado 96 conflitos: 13 de deslocamento/redução
Estado 97 conflitos: 8 de deslocamento/redução
Estado 98 conflitos: 8 de deslocamento/redução
Estado 99 conflitos: 8 de deslocamento/redução
Estado 100 conflitos: 8 de deslocamento/redução
Estado 101 conflitos: 8 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: program functions main
    2        | %empty

    3 functions: functions function
    4          | %empty

    5 $@1: %empty

    6 function: FUNC ID '(' $@1 parameter_list ')' TYPE blocoFunc

    7 parameter_list: parameter_list_not_void
    8               | %empty

    9 parameter_list_not_void: parameter
   10                        | parameter_list_not_void ',' parameter

   11 parameter: ID TYPE

   12 blocoFunc: '{' stmts retorno '}'

   13 retorno: RETURN expr ';'

   14 $@2: %empty

   15 bloco: '{' $@2 stmts '}'

   16 main: FUNC MAIN '(' ')' bloco

   17 stmts: stmts stmt
   18      | %empty

   19 stmt: decl
   20     | declnattr
   21     | expr
   22     | bloco
   23     | attr
   24     | cond
   25     | loop
   26     | ioop

   27 decl: VAR ID TYPE ';'
   28     | VAR ID '[' INTEIRO ']' TYPE ';'

   29 declnattr: VAR ID TYPE '=' expr ';'

   30 variables: ID

   31 function_call: ID '(' argument_list ')' ';'

   32 argument_list: argument_list_not_void
   33              | %empty

   34 argument_list_not_void: argument
   35                       | argument_list_not_void ',' argument

   36 argument: expr

   37 expr: INTEIRO
   38     | REAL
   39     | variables
   40     | function_call
   41     | expr '+' expr
   42     | expr '-' expr
   43     | expr '*' expr
   44     | expr '/' expr
   45     | expr '%' expr
   46     | '(' expr ')'
   47     | expr AND expr
   48     | expr OR expr
   49     | NOT '(' expr ')'
   50     | expr GT expr
   51     | expr LT expr
   52     | expr GE expr
   53     | expr LE expr
   54     | expr EQ expr
   55     | expr NE expr

   56 attr: variables '=' expr ';'

   57 cond: IF '(' expr ')' bloco
   58     | IF '(' expr ')' bloco ELSE bloco

   59 loop: FOR '(' expr ')' bloco

   60 ioop: PRINT '(' ID ')' ';'
   61     | SCANF '(' ID ')' ';'


Terminais, com as regras onde eles aparecem

$end (0) 0
'%' (37) 45
'(' (40) 6 16 31 46 49 57 58 59 60 61
')' (41) 6 16 31 46 49 57 58 59 60 61
'*' (42) 43
'+' (43) 41
',' (44) 10 35
'-' (45) 42
'/' (47) 44
';' (59) 13 27 28 29 31 56 60 61
'=' (61) 29 56
'[' (91) 28
']' (93) 28
'{' (123) 12 15
'}' (125) 12 15
error (256)
TYPE (258) 6 11 27 28 29
INT (259)
FLOAT (260)
GT (261) 50
LT (262) 51
GE (263) 52
LE (264) 53
EQ (265) 54
NE (266) 55
FUNC (267) 6 16
ID (268) 6 11 27 28 29 30 31 60 61
MAIN (269) 16
VAR (270) 27 28 29
IF (271) 57 58
ELSE (272) 58
FOR (273) 59
INTEIRO (274) 28 37
REAL (275) 38
AND (276) 47
OR (277) 48
NOT (278) 49
PRINT (279) 60
SCANF (280) 61
EXPR (281)
ATTR (282)
COND (283)
LOOP (284)
IO (285)
STMT (286)
STMTS (287)
DECL (288)
FUNC_CALL (289)
RETURN (290) 13


Não terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
program (51)
    à esquerda: 1 2, à direita: 0 1
functions (52)
    à esquerda: 3 4, à direita: 1 3
function (53)
    à esquerda: 6, à direita: 3
$@1 (54)
    à esquerda: 5, à direita: 6
parameter_list (55)
    à esquerda: 7 8, à direita: 6
parameter_list_not_void (56)
    à esquerda: 9 10, à direita: 7 10
parameter (57)
    à esquerda: 11, à direita: 9 10
blocoFunc (58)
    à esquerda: 12, à direita: 6
retorno (59)
    à esquerda: 13, à direita: 12
bloco (60)
    à esquerda: 15, à direita: 16 22 57 58 59
$@2 (61)
    à esquerda: 14, à direita: 15
main (62)
    à esquerda: 16, à direita: 1
stmts (63)
    à esquerda: 17 18, à direita: 12 15 17
stmt (64)
    à esquerda: 19 20 21 22 23 24 25 26, à direita: 17
decl (65)
    à esquerda: 27 28, à direita: 19
declnattr (66)
    à esquerda: 29, à direita: 20
variables (67)
    à esquerda: 30, à direita: 39 56
function_call (68)
    à esquerda: 31, à direita: 40
argument_list (69)
    à esquerda: 32 33, à direita: 31
argument_list_not_void (70)
    à esquerda: 34 35, à direita: 32 35
argument (71)
    à esquerda: 36, à direita: 34 35
expr (72)
    à esquerda: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55, à direita: 13 21 29 36 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59
attr (73)
    à esquerda: 56, à direita: 23
cond (74)
    à esquerda: 57 58, à direita: 24
loop (75)
    à esquerda: 59, à direita: 25
ioop (76)
    à esquerda: 60 61, à direita: 26


Estado 0

    0 $accept: . program $end

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 1


Estado 1

    0 $accept: program . $end
    1 program: program . functions main

    $end  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 4 (functions)

    functions  ir ao estado 3


Estado 2

    0 $accept: program $end .

    $padrão  aceitar


Estado 3

    1 program: program functions . main
    3 functions: functions . function

    FUNC  deslocar, e ir ao estado 4

    function  ir ao estado 5
    main      ir ao estado 6


Estado 4

    6 function: FUNC . ID '(' $@1 parameter_list ')' TYPE blocoFunc
   16 main: FUNC . MAIN '(' ')' bloco

    ID    deslocar, e ir ao estado 7
    MAIN  deslocar, e ir ao estado 8


Estado 5

    3 functions: functions function .

    $padrão  reduzir usando a regra 3 (functions)


Estado 6

    1 program: program functions main .

    $padrão  reduzir usando a regra 1 (program)


Estado 7

    6 function: FUNC ID . '(' $@1 parameter_list ')' TYPE blocoFunc

    '('  deslocar, e ir ao estado 9


Estado 8

   16 main: FUNC MAIN . '(' ')' bloco

    '('  deslocar, e ir ao estado 10


Estado 9

    6 function: FUNC ID '(' . $@1 parameter_list ')' TYPE blocoFunc

    $padrão  reduzir usando a regra 5 ($@1)

    $@1  ir ao estado 11


Estado 10

   16 main: FUNC MAIN '(' . ')' bloco

    ')'  deslocar, e ir ao estado 12


Estado 11

    6 function: FUNC ID '(' $@1 . parameter_list ')' TYPE blocoFunc

    ID  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 8 (parameter_list)

    parameter_list           ir ao estado 14
    parameter_list_not_void  ir ao estado 15
    parameter                ir ao estado 16


Estado 12

   16 main: FUNC MAIN '(' ')' . bloco

    '{'  deslocar, e ir ao estado 17

    bloco  ir ao estado 18


Estado 13

   11 parameter: ID . TYPE

    TYPE  deslocar, e ir ao estado 19


Estado 14

    6 function: FUNC ID '(' $@1 parameter_list . ')' TYPE blocoFunc

    ')'  deslocar, e ir ao estado 20


Estado 15

    7 parameter_list: parameter_list_not_void .
   10 parameter_list_not_void: parameter_list_not_void . ',' parameter

    ','  deslocar, e ir ao estado 21

    $padrão  reduzir usando a regra 7 (parameter_list)


Estado 16

    9 parameter_list_not_void: parameter .

    $padrão  reduzir usando a regra 9 (parameter_list_not_void)


Estado 17

   15 bloco: '{' . $@2 stmts '}'

    $padrão  reduzir usando a regra 14 ($@2)

    $@2  ir ao estado 22


Estado 18

   16 main: FUNC MAIN '(' ')' bloco .

    $padrão  reduzir usando a regra 16 (main)


Estado 19

   11 parameter: ID TYPE .

    $padrão  reduzir usando a regra 11 (parameter)


Estado 20

    6 function: FUNC ID '(' $@1 parameter_list ')' . TYPE blocoFunc

    TYPE  deslocar, e ir ao estado 23


Estado 21

   10 parameter_list_not_void: parameter_list_not_void ',' . parameter

    ID  deslocar, e ir ao estado 13

    parameter  ir ao estado 24


Estado 22

   15 bloco: '{' $@2 . stmts '}'

    $padrão  reduzir usando a regra 18 (stmts)

    stmts  ir ao estado 25


Estado 23

    6 function: FUNC ID '(' $@1 parameter_list ')' TYPE . blocoFunc

    '{'  deslocar, e ir ao estado 26

    blocoFunc  ir ao estado 27


Estado 24

   10 parameter_list_not_void: parameter_list_not_void ',' parameter .

    $padrão  reduzir usando a regra 10 (parameter_list_not_void)


Estado 25

   15 bloco: '{' $@2 stmts . '}'
   17 stmts: stmts . stmt

    ID       deslocar, e ir ao estado 28
    VAR      deslocar, e ir ao estado 29
    IF       deslocar, e ir ao estado 30
    FOR      deslocar, e ir ao estado 31
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    PRINT    deslocar, e ir ao estado 35
    SCANF    deslocar, e ir ao estado 36
    '('      deslocar, e ir ao estado 37
    '{'      deslocar, e ir ao estado 17
    '}'      deslocar, e ir ao estado 38

    bloco          ir ao estado 39
    stmt           ir ao estado 40
    decl           ir ao estado 41
    declnattr      ir ao estado 42
    variables      ir ao estado 43
    function_call  ir ao estado 44
    expr           ir ao estado 45
    attr           ir ao estado 46
    cond           ir ao estado 47
    loop           ir ao estado 48
    ioop           ir ao estado 49


Estado 26

   12 blocoFunc: '{' . stmts retorno '}'

    $padrão  reduzir usando a regra 18 (stmts)

    stmts  ir ao estado 50


Estado 27

    6 function: FUNC ID '(' $@1 parameter_list ')' TYPE blocoFunc .

    $padrão  reduzir usando a regra 6 (function)


Estado 28

   30 variables: ID .
   31 function_call: ID . '(' argument_list ')' ';'

    '('  deslocar, e ir ao estado 51

    '('       [reduzir usando a regra 30 (variables)]
    $padrão  reduzir usando a regra 30 (variables)


Estado 29

   27 decl: VAR . ID TYPE ';'
   28     | VAR . ID '[' INTEIRO ']' TYPE ';'
   29 declnattr: VAR . ID TYPE '=' expr ';'

    ID  deslocar, e ir ao estado 52


Estado 30

   57 cond: IF . '(' expr ')' bloco
   58     | IF . '(' expr ')' bloco ELSE bloco

    '('  deslocar, e ir ao estado 53


Estado 31

   59 loop: FOR . '(' expr ')' bloco

    '('  deslocar, e ir ao estado 54


Estado 32

   37 expr: INTEIRO .

    $padrão  reduzir usando a regra 37 (expr)


Estado 33

   38 expr: REAL .

    $padrão  reduzir usando a regra 38 (expr)


Estado 34

   49 expr: NOT . '(' expr ')'

    '('  deslocar, e ir ao estado 55


Estado 35

   60 ioop: PRINT . '(' ID ')' ';'

    '('  deslocar, e ir ao estado 56


Estado 36

   61 ioop: SCANF . '(' ID ')' ';'

    '('  deslocar, e ir ao estado 57


Estado 37

   46 expr: '(' . expr ')'

    ID       deslocar, e ir ao estado 28
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    '('      deslocar, e ir ao estado 37

    variables      ir ao estado 58
    function_call  ir ao estado 44
    expr           ir ao estado 59


Estado 38

   15 bloco: '{' $@2 stmts '}' .

    $padrão  reduzir usando a regra 15 (bloco)


Estado 39

   22 stmt: bloco .

    $padrão  reduzir usando a regra 22 (stmt)


Estado 40

   17 stmts: stmts stmt .

    $padrão  reduzir usando a regra 17 (stmts)


Estado 41

   19 stmt: decl .

    $padrão  reduzir usando a regra 19 (stmt)


Estado 42

   20 stmt: declnattr .

    $padrão  reduzir usando a regra 20 (stmt)


Estado 43

   39 expr: variables .
   56 attr: variables . '=' expr ';'

    '='  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 39 (expr)


Estado 44

   40 expr: function_call .

    $padrão  reduzir usando a regra 40 (expr)


Estado 45

   21 stmt: expr .
   41 expr: expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   45     | expr . '%' expr
   47     | expr . AND expr
   48     | expr . OR expr
   50     | expr . GT expr
   51     | expr . LT expr
   52     | expr . GE expr
   53     | expr . LE expr
   54     | expr . EQ expr
   55     | expr . NE expr

    GT   deslocar, e ir ao estado 61
    LT   deslocar, e ir ao estado 62
    GE   deslocar, e ir ao estado 63
    LE   deslocar, e ir ao estado 64
    EQ   deslocar, e ir ao estado 65
    NE   deslocar, e ir ao estado 66
    AND  deslocar, e ir ao estado 67
    OR   deslocar, e ir ao estado 68
    '+'  deslocar, e ir ao estado 69
    '-'  deslocar, e ir ao estado 70
    '*'  deslocar, e ir ao estado 71
    '/'  deslocar, e ir ao estado 72
    '%'  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 21 (stmt)


Estado 46

   23 stmt: attr .

    $padrão  reduzir usando a regra 23 (stmt)


Estado 47

   24 stmt: cond .

    $padrão  reduzir usando a regra 24 (stmt)


Estado 48

   25 stmt: loop .

    $padrão  reduzir usando a regra 25 (stmt)


Estado 49

   26 stmt: ioop .

    $padrão  reduzir usando a regra 26 (stmt)


Estado 50

   12 blocoFunc: '{' stmts . retorno '}'
   17 stmts: stmts . stmt

    ID       deslocar, e ir ao estado 28
    VAR      deslocar, e ir ao estado 29
    IF       deslocar, e ir ao estado 30
    FOR      deslocar, e ir ao estado 31
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    PRINT    deslocar, e ir ao estado 35
    SCANF    deslocar, e ir ao estado 36
    RETURN   deslocar, e ir ao estado 74
    '('      deslocar, e ir ao estado 37
    '{'      deslocar, e ir ao estado 17

    retorno        ir ao estado 75
    bloco          ir ao estado 39
    stmt           ir ao estado 40
    decl           ir ao estado 41
    declnattr      ir ao estado 42
    variables      ir ao estado 43
    function_call  ir ao estado 44
    expr           ir ao estado 45
    attr           ir ao estado 46
    cond           ir ao estado 47
    loop           ir ao estado 48
    ioop           ir ao estado 49


Estado 51

   31 function_call: ID '(' . argument_list ')' ';'

    ID       deslocar, e ir ao estado 28
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    '('      deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 33 (argument_list)

    variables               ir ao estado 58
    function_call           ir ao estado 44
    argument_list           ir ao estado 76
    argument_list_not_void  ir ao estado 77
    argument                ir ao estado 78
    expr                    ir ao estado 79


Estado 52

   27 decl: VAR ID . TYPE ';'
   28     | VAR ID . '[' INTEIRO ']' TYPE ';'
   29 declnattr: VAR ID . TYPE '=' expr ';'

    TYPE  deslocar, e ir ao estado 80
    '['   deslocar, e ir ao estado 81


Estado 53

   57 cond: IF '(' . expr ')' bloco
   58     | IF '(' . expr ')' bloco ELSE bloco

    ID       deslocar, e ir ao estado 28
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    '('      deslocar, e ir ao estado 37

    variables      ir ao estado 58
    function_call  ir ao estado 44
    expr           ir ao estado 82


Estado 54

   59 loop: FOR '(' . expr ')' bloco

    ID       deslocar, e ir ao estado 28
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    '('      deslocar, e ir ao estado 37

    variables      ir ao estado 58
    function_call  ir ao estado 44
    expr           ir ao estado 83


Estado 55

   49 expr: NOT '(' . expr ')'

    ID       deslocar, e ir ao estado 28
    INTEIRO  deslocar, e ir ao estado 32
    REAL     deslocar, e ir ao estado 33
    NOT      deslocar, e ir ao estado 34
    '('      deslocar, e ir ao estado 37

    variables      ir ao estado 58
    function_call  ir ao estado 44
    expr           ir ao estado 84


Estado 56

   60 ioop: PRINT '(' . ID ')' ';'

    ID  deslocar, e ir ao estado 85


Estado 57

   61 ioop: SCANF '(' . ID ')' ';'

    ID  deslocar, e ir ao estado 86


Estado 58

   39 expr: variables .

    $padrão  reduzir usando a regra 39 (expr)


Estado 59

   41 expr: expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   45     | expr . '%' expr
   46     | '(' expr . ')'
   47     | expr . AND expr
   48     | expr . OR expr
   50     | expr . GT expr
   51     | expr . LT expr
   52     | expr . GE expr
   53     | expr . LE expr
   54     | expr . EQ expr
   55     | expr . NE expr
